basic layout of website

--- a/textbook files/cdrom/web04/nature2/index.html
+++ b/textbook files/cdrom/web04/nature2/index.html
@@ -9,6 +9,16 @@
   </head>
   <body>
     <div id="page">
+      <!-- mainmenu.html -->
+      <div id="mainMenu">
+        <ul id="mainLinks">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="buy.html">Buy Now</a></li>
+          <li><a href="products.html">Products and Services</a></li>
+          <li><a href="yourhealth.html">Your Health</a></li>
+          <li><a href="about.html">About Us</a></li>
+        </ul>
+      </div>
       <!--#include virtual="common/logo.html"-->
       <!--#include virtual="common/mainmenu.html"-->
       <div id="content">
@@ -27,7 +37,7 @@
           Education seminars are a regular event at Nature's Source.</p>
         </div>
         <div id="image">
-          <img src="images/outdoor4.jpg" alt="Eternal peace" 
+          <img src="images/outdoor4.jpg" alt="Eternal peace"
           width="272px" height="154px" />
         </div>
       </div>
