--- a/index.html
+++ b/index.html
@@ -1,7 +1,40 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <title>Nature's Source - Canada's largest specialty vitamin store</title>
+    <title>Food2U</title>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <link rel="stylesheet" type="text/css" href="css/default.css" />
   </head>
+<body>
+
+  <div id="page">
+    <div id="header">
+      <img src="assets/img/banner.jpg" width="768" alt="buger banner">
+    </div>
+    <div id="mainMenu">
+      <ul id="mainLinks">
+        <li>Home</li>
+        <li>Restaurants</li>
+        <li>FAQ</li>
+        <li>Contact Us</li>
+      </ul>
+    </div>
+
+    <div class="container">
+      <div id="main">
+        <p>
+          Chupa chups chocolate soufflé soufflé topping carrot cake bonbon. Cake chupa chups chupa chups cookie lemon drops lollipop marshmallow pudding lemon drops. Powder donut wafer jelly-o cotton candy marshmallow. Danish marzipan candy canes fruitcake lollipop chocolate bar chocolate bar tootsie roll. Soufflé liquorice gummi bears toffee. Wafer jelly-o cupcake. Jelly beans bonbon macaroon sweet roll macaroon bonbon pastry. Powder gummies lollipop cupcake marshmallow. Brownie tart gummi bears. Carrot cake cake tart. Donut cookie pie danish bonbon sesame snaps topping halvah gummi bears. Tiramisu cookie jelly beans. Powder tootsie roll candy canes jujubes donut. Icing liquorice sweet cake.
+        </p>
+      </div>
+
+      <div id="receipt">
+        <p>
+          Chupa chups chocolate soufflé soufflé topping carrot cake bonbon. Cake chupa chups chupa chups cookie lemon drops lollipop marshmallow pudding lemon drops. Powder donut wafer jelly-o cotton candy marshmallow. Danish marzipan candy canes fruitcake lollipop chocolate bar
+
+          Bacon ipsum dolor amet ham hock pork loin pork short ribs strip steak cow ball tip meatball corned beef flank pig landjaeger pastrami. Ball tip pork belly sausage flank andouille tenderloin salami ham hock landjaeger picanha ribeye sirloin venison prosciutto jowl. T-bone porchetta venison, biltong doner turducken bresaola leberkas. Bacon sirloin strip steak kielbasa pastrami, prosciutto tenderloin ground round ham short loin pork chop. Tenderloin porchetta prosciutto capicola cupim swine sirloin. Salami pork belly pork loin fatback picanha alcatra chuck filet mignon beef ribs boudin spare ribs.
+        </p>
+      </div>
+    </div>
+
+  </div>
+</body>
 </html>
