--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <div id="mainMenu">
       <ul id="mainLinks">
         <li>Home</li>
-        <li>Restaurants</li>
         <li>FAQ</li>
         <li>Contact Us</li>
       </ul>
@@ -21,9 +20,30 @@
 
     <div class="container">
       <div id="main">
-        <p>
-          Chupa chups chocolate soufflé soufflé topping carrot cake bonbon. Cake chupa chups chupa chups cookie lemon drops lollipop marshmallow pudding lemon drops. Powder donut wafer jelly-o cotton candy marshmallow. Danish marzipan candy canes fruitcake lollipop chocolate bar chocolate bar tootsie roll. Soufflé liquorice gummi bears toffee. Wafer jelly-o cupcake. Jelly beans bonbon macaroon sweet roll macaroon bonbon pastry. Powder gummies lollipop cupcake marshmallow. Brownie tart gummi bears. Carrot cake cake tart. Donut cookie pie danish bonbon sesame snaps topping halvah gummi bears. Tiramisu cookie jelly beans. Powder tootsie roll candy canes jujubes donut. Icing liquorice sweet cake.
-        </p>
+        <p>Delicious UCI Restaurants that we offer</p>
+
+      <div class="grid">
+        <span class="col-1">
+          <a href="#"><img height="75" src="assets/img/chipotle.png"></a>
+        </span>
+        <span class="col-2">
+          <a href="#"><img height="75" src="assets/img/starbucks.png"></a>
+        </span>
+
+
+        <span class="col-1">
+          <a href="#"><img height="75" src="assets/img/in-n-out.png"></a>
+        </span>
+        <span class="col-2">
+          <a href="#"><img height="75" src="assets/img/chick-fil-a.png"></a>
+        </span>
+      </div>
+
+
+
+
+
+
       </div>
 
       <div id="receipt">
