grid buttons (almost)

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
-  <head>
-    <title>Food2U</title>
-    <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
-    <link rel="stylesheet" type="text/css" href="css/default.css" />
-  </head>
+
+<head>
+  <title>Food2U</title>
+  <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+  <link rel="stylesheet" type="text/css" href="css/default.css" />
+</head>
+
 <body>
 
   <div id="page">
@@ -22,39 +24,33 @@
       <div id="main">
         <p>Delicious UCI Restaurants that we offer</p>
 
-      <div class="grid">
-        <span class="col-1">
-          <a href="#"><img height="75" src="assets/img/chipotle.png"></a>
-        </span>
-        <span class="col-2">
-          <a href="#"><img height="75" src="assets/img/starbucks.png"></a>
-        </span>
+        <div class="grid-container outline">
 
+          <div class="row">
+            <a href="#"><span class="col-1"><img id="logo" height="75" src="assets/img/chipotle.png"></span></a>
+            <a href="#"><span class="col-1"><img id="logo" height="75" src="assets/img/starbucks.png"></span></a>
+          </div>
+          <div class="row">
+            <a href="#"><span class="col-1"><img id="logo" height="75" src="assets/img/in-n-out.png"></span></a>
+            <a href="#"><span class="col-1"><img id="logo" height="75" src="assets/img/chick-fil-a.png"></span></a>
+          </div>
 
-        <span class="col-1">
-          <a href="#"><img height="75" src="assets/img/in-n-out.png"></a>
-        </span>
-        <span class="col-2">
-          <a href="#"><img height="75" src="assets/img/chick-fil-a.png"></a>
-        </span>
-      </div>
-
-
-
-
+        </div>
 
 
       </div>
 
       <div id="receipt">
         <p>
-          Chupa chups chocolate soufflé soufflé topping carrot cake bonbon. Cake chupa chups chupa chups cookie lemon drops lollipop marshmallow pudding lemon drops. Powder donut wafer jelly-o cotton candy marshmallow. Danish marzipan candy canes fruitcake lollipop chocolate bar
-
-          Bacon ipsum dolor amet ham hock pork loin pork short ribs strip steak cow ball tip meatball corned beef flank pig landjaeger pastrami. Ball tip pork belly sausage flank andouille tenderloin salami ham hock landjaeger picanha ribeye sirloin venison prosciutto jowl. T-bone porchetta venison, biltong doner turducken bresaola leberkas. Bacon sirloin strip steak kielbasa pastrami, prosciutto tenderloin ground round ham short loin pork chop. Tenderloin porchetta prosciutto capicola cupim swine sirloin. Salami pork belly pork loin fatback picanha alcatra chuck filet mignon beef ribs boudin spare ribs.
+          Chupa chups chocolate soufflé soufflé topping carrot cake bonbon. Cake chupa chups chupa chups cookie lemon drops lollipop marshmallow pudding lemon drops. Powder donut wafer jelly-o cotton candy marshmallow. Danish marzipan candy canes fruitcake lollipop
+          chocolate bar Bacon ipsum dolor amet ham hock pork loin pork short ribs strip steak cow ball tip meatball corned beef flank pig landjaeger pastrami. Ball tip pork belly sausage flank andouille tenderloin salami ham hock landjaeger picanha ribeye
+          sirloin venison prosciutto jowl. T-bone porchetta venison, biltong doner turducken bresaola leberkas. Bacon sirloin strip steak kielbasa pastrami, prosciutto tenderloin ground round ham short loin pork chop. Tenderloin porchetta prosciutto capicola
+          cupim swine sirloin. Salami pork belly pork loin fatback picanha alcatra chuck filet mignon beef ribs boudin spare ribs.
         </p>
       </div>
     </div>
 
   </div>
 </body>
+
 </html>
