--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
     <div id="mainMenu">
       <ul id="mainLinks">
-        <li>Home</li>
+        <li><a href="index.html">Home</a></li>
         <li>FAQ</li>
         <li>Contact Us</li>
       </ul>
