--- a/common/mainmenu.html
+++ b/common/mainmenu.html
@@ -3,7 +3,7 @@
 </div>
 <div id="mainMenu">
   <ul id="mainLinks">
-    <li><a href="index.html">Home</a></li>
+    <li><a href="./index.php">Home</a></li>
     <li>FAQ</li>
     <li>Contact Us</li>
   </ul>
