Added Contact-Us page

--- a/common/mainmenu.html
+++ b/common/mainmenu.html
@@ -5,6 +5,6 @@
   <ul id="mainLinks">
     <li><a href="./index.php">Home</a></li>
     <li>FAQ</li>
-    <li>Contact Us</li>
+    <li><a href="./contact-us.php">Contact Us</li>
   </ul>
 </div>
