--- a/common/sidebar.html
+++ b/common/sidebar.html
@@ -1,22 +1,19 @@
 <div id="receipt">
 
-<p class="center">Running Totals of your Order</p>
+  <div>
+    <img style="float:right; width: 30px" src="./assets/img/cart.png">
+    <p class="center">
+      <strong>Shopping Cart</strong>
+    </p>
 
-  <table>
-    <th>
-      Item(s) Ordered:
-    </th>
-    <th>
-      Price:
-    </th>
-    <tr>
-      <td>Iced Mocha Latte</td>
-      <td>$3.95</td>
-    </tr>
+  </div>
+
+
+  <table id="receiptTable">
   </table>
 
-<br>
+  <br>
 
-  <button class="center" type="button" name="button">Checkout</button>
+  <button class="center" type="button" name="button">Order Now</button>
 
 </div>
