--- a/common/mainmenu.html
+++ b/common/mainmenu.html
@@ -1,5 +1,5 @@
 <div id="header">
-  <img src="./assets/img/banner.jpg" width="768" alt="buger banner">
+  <img src="./assets/img/banner.jpg" alt="buger banner">
 </div>
 <div id="mainMenu">
   <ul id="mainLinks">
