changes to the front page

--- a/common/mainmenu.html
+++ b/common/mainmenu.html
@@ -7,8 +7,8 @@
     <li>
       <a href="" onmouseover="show('m3')">Our Restaurants</a>
       <div id="m3" onmouseover="show('m3')">
-        <a href="#">In-N-Out Irvine</a>
-        <a href="#">Starbucks</a>
+        <a href="./in-n-out.php">In-N-Out Irvine</a>
+        <a href="./starbucks.php">Starbucks</a>
         <a href="#">Chipotle: COMING SOON</a>
         <a href="#">Chick-Fil-A: COMING SOON</a>
       </div>
