moved the receipt.js reference to the common sidebar.html

--- a/common/sidebar.html
+++ b/common/sidebar.html
@@ -17,3 +17,6 @@
   <button class="center" type="button" name="button">Order Now</button>
 
 </div>
+
+
+<script language="javascript" type="text/javascript" src="assets/javascript/receipt.js"></script>
