--- a/common/mainmenu.html
+++ b/common/mainmenu.html
@@ -1,5 +1,17 @@
 <div id="header">
-  <img src="./assets/img/banner.jpg" alt="buger banner">
+  <div id="companyLogo">
+    <img src="./assets/img/logo.png">
+  </div>
+
+  <div id="callToAction">
+    <span class="center">
+      Food2U - Irvine <br>
+      1600 Amphitheatre Parkway <br>
+      Mountain View, CA 94043 <br>
+      Phone: +1 650-253-0000 <br>
+    </span>
+  </div>
+
 </div>
 <div id="mainMenu" onmouseout="hide()">
   <ul class="Links" id="mainLinks">
