added mission statement in the menu bar (under contact us)

--- a/common/mainmenu.html
+++ b/common/mainmenu.html
@@ -17,15 +17,20 @@
   <ul class="Links" id="mainLinks">
     <li><a href="./index.php">Home</a></li>
     <li>
-      <a href="" onmouseover="show('m3')">Our Restaurants</a>
-      <div id="m3" onmouseover="show('m3')">
+      <a href="" onmouseover="show('m1')">Our Restaurants</a>
+      <div id="m3" onmouseover="show('m1')">
         <a href="./in-n-out.php">In-N-Out Irvine</a>
         <a href="./starbucks.php">Starbucks</a>
-        <a href="#">Chipotle: COMING SOON</a>
-        <a href="#">Chick-Fil-A: COMING SOON</a>
+        <a>Chipotle: COMING SOON</a>
+        <a>Chick-Fil-A: COMING SOON</a>
       </div>
     </li>
-    <li><a href="./contact-us.php">Contact Us</a></li>
+    <li>
+      <a onmouseover="show('m2')" href="./contact-us.php">Contact Us</a>
+      <div id="m2" onmouseover="show('m2')">
+        <a href="#">Mission Statement</a>
+      </div>
+    </li>
   </ul>
 </div>
 
