--- a/common/mainmenu.html
+++ b/common/mainmenu.html
@@ -18,7 +18,7 @@
     <li><a href="./index.php">Home</a></li>
     <li>
       <a href="" onmouseover="show('m1')">Our Restaurants</a>
-      <div id="m3" onmouseover="show('m1')">
+      <div id="m1" class="dropdown" onmouseover="show('m1')">
         <a href="./in-n-out.php">In-N-Out Irvine</a>
         <a href="./starbucks.php">Starbucks</a>
         <a>Chipotle: COMING SOON</a>
@@ -27,7 +27,7 @@
     </li>
     <li>
       <a onmouseover="show('m2')" href="./contact-us.php">Contact Us</a>
-      <div id="m2" onmouseover="show('m2')">
+      <div id="m2" class="dropdown" onmouseover="show('m2')">
         <a href="#">Mission Statement</a>
       </div>
     </li>
