--- a/common/mainmenu.html
+++ b/common/mainmenu.html
@@ -28,7 +28,7 @@
     <li>
       <a onmouseover="show('m2')" href="./contact-us.php">Contact Us</a>
       <div id="m2" class="dropdown" onmouseover="show('m2')">
-        <a href="#">About Us</a>
+        <a href="./about-us.php">About Us</a>
       </div>
     </li>
   </ul>
